--- a/JavaApp/docker-compose.yml
+++ b/JavaApp/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8081:8081"   
-    restart: on-failure
+    #restart: on-failure
     networks:
     - my-custom-network
     
